--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 
     <title>Игра "Быки и коровы"</title>
 
-    <style>
+    <!-- <style>
       html {
         font-family: sans-serif;
       }
@@ -21,7 +21,7 @@
         color: white;
         padding: 3px;
       }
-    </style>
+    </style> -->
   </head>
 
   <body>
