npm install react-router-dom

--- a/public/index.html
+++ b/public/index.html
@@ -2,29 +2,27 @@
 <html>
   <head>
     <meta charset="utf-8">
+    
 
     <title>Игра "Быки и коровы"</title>
 
-    <!-- <style>
-      html {
+    <style>
+      /* html {
         font-family: sans-serif;
-      }
+      } */
 
       body {
-        width: 50%;
-        max-width: 800px;
-        min-width: 480px;
-        margin: 0 auto;
+        background-color: beige;
       }
 
-      .lastResult {
+      /* .lastResult {
         color: white;
         padding: 3px;
-      }
-    </style> -->
+      } */
+    </style>
   </head>
 
-  <body>
+  <body class="body">
       
     <div id = 'root'></div>
   </body>
