--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       } */
 
       body {
-        background-color: beige;
+        background-color: rgb(236, 236, 236);
       }
 
       /* .lastResult {
