--- a/public/index.html
+++ b/public/index.html
@@ -3,20 +3,11 @@
 
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=550" />
-
-
+  <meta name="viewport" content="width=550">
   <title>Игра "Быки и коровы"</title>
-
-  <style>
-    body {
-      background-color: rgb(236, 236, 236);
-    }   
-  </style>
 </head>
 
-<body class="body">
-
+<body>
   <div id='root'></div>
 </body>
 
