--- a/public/index.html
+++ b/public/index.html
@@ -1,14 +1,12 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=400" />
+    <title>Игра "Быки и коровы"</title>
+  </head>
 
-<head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=400">
-  <title>Игра "Быки и коровы"</title>
-</head>
-
-<body>
-  <div id='root'></div>
-</body>
-
+  <body>
+    <div id="root"></div>
+  </body>
 </html>
